--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 		    </tr>
 		</thead>
 		<tbody>
+		<!--
 		<tr id='addr0'>
 		    <td>
 			1
@@ -88,6 +89,7 @@
 		    </td>
 		</tr>
 		<tr id='addr1'></tr>
+		--!>
 		</tbody>
 	    </table>
 	</div>
@@ -102,16 +104,26 @@
 
 	
     </div> <!-- /container -->
-
+    <div id="result">
+	test
+    </div>
     <script>
-	var i=1;
+	var i=-1;
+	function add_row_data(bill_date, bill_price, bill_type, bill_comment, bill_assign) {
+		$('#addr'+i).html("<td>"+ (i+1) +"</td><td><input name='date"+i+"' data-date-format='yyyy/mm/dd' placeholder='Pick a date' class='datepicker form-control' value='"+bill_date+"'> </td><td><input  name='price"+i+"' type='text' placeholder='Price'  class='form-control input-md' value="+bill_price+"></td><td> <select class='form-control' name='billType"+i+"' value="+bill_type+"><option value='normal'>Normal</option><option value='icash'>ICash</option> <option value='network'>Network</option> <option value='oil'>Oil</option></select></td><td><input  name='comment"+i+"' type='text' placeholder='Comment'  class='form-control input-md' value="+bill_comment+"></td><td><select class='form-control' name='preAssign"+i+"' value="+bill_assign+"> <option value=''>Choose a card</option> <option value='cardHN'>HN</option> <option value='cardYS'>YS</option> <option value='cardHNICash'>HNICash</option> </select></td>");
+		$('#tab_logic').append('<tr id="addr'+(i+1)+'"></tr>');
+		i++;;
+		$('#tab_logic .datepicker').datepicker(function(){
+	    		console.log("test");
+	    });
+	}
 	$(document).on('click', '#add_row', function(){
 		$('#addr'+i).html("<td>"+ (i+1) +"</td><td><input name='date"+i+"' data-date-format='yyyy/mm/dd' placeholder='Pick a date' class='datepicker form-control'> </td><td><input  name='price"+i+"' type='text' placeholder='Price'  class='form-control input-md'></td><td> <select class='form-control' name='billType"+i+"'><option value='normal'>Normal</option><option value='icash'>ICash</option> <option value='network'>Network</option> <option value='oil'>Oil</option></select></td><td><input  name='comment"+i+"' type='text' placeholder='Comment'  class='form-control input-md'></td><td><select class='form-control' name='preAssign"+i+"'> <option value=''>Choose a card</option> <option value='cardHN'>HN</option> <option value='cardYS'>YS</option> <option value='cardHNICash'>HNICash</option> </select></td>");
 
 	    $('#tab_logic').append('<tr id="addr'+(i+1)+'"></tr>');
 	    i++; 
 	 
-	    $('.datepicker').datepicker(function(){
+	    $('#tab_logic .datepicker').datepicker(function(){
 	    	console.log("test");
 	    });
 	});	
@@ -124,8 +136,27 @@ $(document).ready(function(){
 		 i--;
 		 }
 	 });
-     
-
+     /*
+     $("#result").load("/ajax/data", function() {
+	 console.log("oh yeah");
+	 }); 
+     */
+     var file = "/ajax/data";
+     $.get(file, function(txt) {
+     	var lines = txt.split("\n");
+	var lineSize = lines.length;
+	console.log('line:' + lineSize);
+	for (var i = 0; i < lineSize-1; ++i) {
+	    console.log(i+": "+lines[i]);
+	    var tokens = lines[i].split(", ");
+	    var bill_date = tokens[0];
+	    var bill_price = tokens[1];
+	    var bill_type = tokens[2];
+	    var bill_comment = tokens[3];
+	    var bill_assign = tokens[4];
+	    add_row_data(bill_date, bill_price, bill_type, bill_comment, bill_assign);
+	}
+     });
 });
 
 	</script>
