--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CreditCardOpt</title>
-<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
-<!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 <link rel="stylesheet" href="css/datepicker.css">
 <link rel="stylesheet" href="css/bootstrap-combobox.css">
@@ -15,22 +13,18 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/bootstrap-datepicker.js"></script>
 <script src="js/bootstrap-combobox.js"></script>
-<!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-
-
-    <script src="/output.js"></script>
+<script src="/output.js"></script>
 </head>
 <body>
 
     <div class="container">
- 
 
-      <div class="jumbotron">
+    <div class="jumbotron">
         <h1>CredictCardOpt</h1>
 	<p/>
-<div class="container">
+    <div class="container">
     <div class="row clearfix">
 	<div class="col-md-12 column">
 	    <table class="table table-bordered table-hover" id="tab_logic">
@@ -81,7 +75,7 @@
 		    </td>
 		    <td>
 		    	<select class="form-control" name="preAssign0">
-                	<option value="">Choose a card</option>
+                	<option value="NULL">Choose a card</option>
                	 	<option value="cardHN">HN</option>
                 	<option value="cardYS">YS</option>
                 	<option value="cardHNICash">HNICash</option>
@@ -95,79 +89,76 @@
 	</div>
     </div>
     <a id="add_row" class="btn btn-default pull-left">Add Bill</a><a id='delete_row' class="pull-right btn btn-default">Delete Bill</a>
-</div>
+    </div>
 <p/>
 <p><a class="btn btn-lg btn-success" href="#" role="button">OK</a></p>
       </div>
 
-     
-
-	
     </div> <!-- /container -->
-    <div id="result">
-	test
-    </div>
     <script>
-	var i=0;
-	function add_row_data(bill_date, bill_price, bill_type, bill_comment, bill_assign) {
-		$('#tab_logic').append('<tr id="addr'+(i)+'"></tr>');
-		$('#addr'+i).html("<td>"+ (i+1) +"</td><td><input name='date"+i+"' data-date-format='yyyy/mm/dd' placeholder='Pick a date' class='datepicker form-control' value='"+bill_date+"'> </td><td><input  name='price"+i+"' type='text' placeholder='Price'  class='form-control input-md' value="+bill_price+"></td><td> <select class='form-control' id='billType"+i+"' value="+bill_type+"><option value='normal'>Normal</option><option value='icash'>ICash</option> <option value='network'>Network</option> <option value='oil'>Oil</option></select></td><td><input  name='comment"+i+"' type='text' placeholder='Comment'  class='form-control input-md' value="+bill_comment+"></td><td><select class='form-control' id='preAssign"+i+"' value="+bill_assign+"> <option value=''>Choose a card</option> <option value='cardHN'>HN</option> <option value='cardYS'>YS</option> <option value='cardHNICash'>HNICash</option> </select></td>");
-		console.log(typeof bill_type);
-		console.log(typeof "icash");
-		if (bill_type == "icash") {
-			console.log("!!!!!!");
-		}
-		$('#billType'+i).val(bill_type);
-		$('#preAssign'+i).val(bill_assign);
-		i++;;
-		$('#tab_logic .datepicker').datepicker(function(){
-	    		console.log("test");
-	    });
-	}
-	$(document).on('click', '#add_row', function(){
-	    $('#tab_logic').append('<tr id="addr'+(i)+'"></tr>');
-		$('#addr'+i).html("<td>"+ (i+1) +"</td><td><input name='date"+i+"' data-date-format='yyyy/mm/dd' placeholder='Pick a date' class='datepicker form-control'> </td><td><input  name='price"+i+"' type='text' placeholder='Price'  class='form-control input-md'></td><td> <select class='form-control' name='billType"+i+"'><option value='normal'>Normal</option><option value='icash'>ICash</option> <option value='network'>Network</option> <option value='oil'>Oil</option></select></td><td><input  name='comment"+i+"' type='text' placeholder='Comment'  class='form-control input-md'></td><td><select class='form-control' name='preAssign"+i+"'> <option value=''>Choose a card</option> <option value='cardHN'>HN</option> <option value='cardYS'>YS</option> <option value='cardHNICash'>HNICash</option> </select></td>");
+        var i=0;
+        function add_row_data(bill_date, bill_price, bill_type, bill_comment, bill_assign) {
+		    $('#tab_logic').append('<tr id="addr'+(i)+'"></tr>');
+            $('#addr'+i).html("<td>"+ (i+1) +"</td><td><input name='date"+i+"' data-date-format='yyyy/mm/dd' placeholder='Pick a date' class='datepickerx form-control' value='"+bill_date+"'> </td><td><input  name='price"+i+"' type='text' placeholder='Price'  class='form-control input-md' value="+bill_price+"></td><td> <select class='form-control' id='billType"+i+"' value="+bill_type+"><option value='normal'>Normal</option><option value='icash'>ICash</option> <option value='network'>Network</option> <option value='oil'>Oil</option></select></td><td><input  name='comment"+i+"' type='text' placeholder='Comment'  class='form-control input-md' value="+bill_comment+"></td><td><select class='form-control' id='preAssign"+i+"' value="+bill_assign+"> <option value=''>Choose a card</option> <option value='cardHN'>HN</option> <option value='cardYS'>YS</option> <option value='cardHNICash'>HNICash</option> </select></td>");
+            var x = document.getElementById("billType"+i);
+            for (var idx = 0; idx < x.options.length; ++idx) {
+                if (x.options[idx].value === bill_type) {
+                    x.options[idx].selected = true;
+                }
+            }
+            var z = document.getElementById("preAssign"+i);
+            for (var idx = 0; idx < z.options.length; ++idx) {
+                if (z.options[idx].value === bill_assign) {
+                    z.options[idx].selected = true;
+                }
+            }
 
-	    i++; 
+            i++;;
+            $('#tab_logic .datepickerx').datepicker({'toggleActive':true})
+                .on('changeDate', function(e) {
+                        console.log('on select');
+                        $(this).datepicker('hide');
+                        });
+        }
+        $(document).on('click', '#add_row', function(){
+            $('#tab_logic').append('<tr id="addr'+(i)+'"></tr>');
+            $('#addr'+i).html("<td>"+ (i+1) +"</td><td><input name='date"+i+"' data-date-format='yyyy/mm/dd' placeholder='Pick a date' class='datepickerx form-control'> </td><td><input  name='price"+i+"' type='text' placeholder='Price'  class='form-control input-md'></td><td> <select class='form-control' id='billType"+i+"'><option value='normal'>Normal</option><option value='icash'>ICash</option> <option value='network'>Network</option> <option value='oil'>Oil</option></select></td><td><input  name='comment"+i+"' type='text' placeholder='Comment'  class='form-control input-md'></td><td><select class='form-control' name='preAssign"+i+"'> <option value=''>Choose a card</option> <option value='cardHN'>HN</option> <option value='cardYS'>YS</option> <option value='cardHNICash'>HNICash</option> </select></td>");
+
+            i++; 
 	 
-	    $('#tab_logic .datepicker').datepicker(function(){
-	    	console.log("test");
-	    });
-	});	
+            $('#tab_logic .datepickerx').datepicker({'toggleActive':true})
+                .on('changeDate', function(e) {
+                    console.log('on select');
+                    $(this).datepicker('hide');
+                    });
+        });	
 
-$(document).ready(function(){
+        $(document).ready(function(){
 
-     $("#delete_row").click(function(){
-    	 if(i>1){
-		 $("#addr"+(i-1)).html('');
-		 i--;
-		 }
-	 });
-     /*
-     $("#result").load("/ajax/data", function() {
-	 console.log("oh yeah");
-	 }); 
-     */
-     var file = "/ajax/data";
-     $.get(file, function(txt) {
-     	var lines = txt.split("\n");
-	var lineSize = lines.length;
-	console.log('line:' + lineSize);
-	for (var i = 0; i < lineSize-1; ++i) {
-	    console.log(i+": "+lines[i]);
-	    var tokens = lines[i].split(", ");
-	    var bill_date = tokens[0];
-	    var bill_price = tokens[1];
-	    var bill_type = String(tokens[2]);
-	    var bill_comment = tokens[3];
-	    var bill_assign = String(tokens[4]);
-	    add_row_data(bill_date, bill_price, bill_type, bill_comment, bill_assign);
-	}
-     });
-});
-
-	</script>
-
+            $("#delete_row").click(function(){
+                if(i>1){
+                    $("#addr"+(i-1)).html('');
+                    i--;
+                }
+            });
+            var file = "/ajax/data";
+            $.get(file, function(txt) {
+                var lines = txt.split("\n");
+                var lineSize = lines.length;
+                console.log('line:' + lineSize);
+                for (var i = 0; i < lineSize-1; ++i) {
+                    console.log(i+": "+lines[i]);
+                    var tokens = lines[i].split(", ");
+                    var bill_date = tokens[0];
+                    var bill_price = tokens[1];
+                    var bill_type = String(tokens[2]);
+                    var bill_comment = tokens[3];
+                    var bill_assign = String(tokens[4]);
+                    add_row_data(bill_date, bill_price, bill_type, bill_comment, bill_assign);
+                }
+            });
+        });
+    </script>
 
     <script>
         var cardMgr = new Module.CredictCardMgr();
@@ -186,7 +177,7 @@ $(document).ready(function(){
         var a9 = new Module.Bill(2015, 9, 100, 1490, "network", "baby3");
         var a0 = new Module.Bill(2015, 9, 100, 25000, "network", "iphone");
         
-	cardMgr.addBill(a1, null);
+	    cardMgr.addBill(a1, null);
         cardMgr.addBill(a2, null);
         cardMgr.addBill(a3, null);
         cardMgr.addBill(a4, null);
@@ -198,15 +189,15 @@ $(document).ready(function(){
         cardMgr.addBill(a0, null);
         cardMgr.assignCard();
 	// =============================================
-	console.log(cardMgr.getMaxDisCount());
+        console.log(cardMgr.getMaxDisCount());
 
-	var hnBillVector = new Module.vectorBill();
-	hnCard.getBestAssignBill(hnBillVector);
-	console.log(hnBillVector.size());
+        var hnBillVector = new Module.vectorBill();
+        hnCard.getBestAssignBill(hnBillVector);
+        console.log(hnBillVector.size());
 
-	var ysBillVector = new Module.vectorBill();
-	ysCard.getBestAssignBill(ysBillVector);
-	console.log(ysBillVector.size());
+        var ysBillVector = new Module.vectorBill();
+        ysCard.getBestAssignBill(ysBillVector);
+        console.log(ysBillVector.size());
     </script>
 </body>
 </html>
