--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             i++;;
             $('#tab_logic .datepickerx').datepicker({'toggleActive':true})
                 .on('changeDate', function(e) {
-                        console.log('on select');
+                        //console.log('on select');
                         $(this).datepicker('hide');
                         });
         }
@@ -131,7 +131,7 @@
 	 
             $('#tab_logic .datepickerx').datepicker({'toggleActive':true})
                 .on('changeDate', function(e) {
-                    console.log('on select');
+                    //console.log('on select');
                     $(this).datepicker('hide');
                     });
         });	
@@ -266,17 +266,17 @@
                 }
             }
             cardMgr.assignCard();
-            console.log(total_price);
-            console.log(cardMgr.getMaxDisCount());
+            //console.log(total_price);
+            //console.log(cardMgr.getMaxDisCount());
             var discount = parseInt(cardMgr.getMaxDisCount());
             var ratio = parseFloat(discount / total_price) * 100;
-            console.log(ratio.toFixed(2)+'%');
+            //console.log(ratio.toFixed(2)+'%');
              
             $('#result').html('Result: '+discount+' / '+total_price+' = '+ ratio.toFixed(2) + '%');
 
             var hnBillVector = new Module.vectorBill();
             hnCard.getBestAssignBill(hnBillVector);
-            console.log(hnBillVector.size());
+            //console.log(hnBillVector.size());
             
             setCard(hnBillVector, bills, 1);
             /*
@@ -293,7 +293,7 @@
 
             var ysBillVector = new Module.vectorBill();
             ysCard.getBestAssignBill(ysBillVector);
-            console.log(ysBillVector.size());
+            //console.log(ysBillVector.size());
             setCard(ysBillVector, bills, 2);
             /*
             for (var ysVecIdx = 0; ysVecIdx < ysBillVector.size(); ++ysVecIdx) {
@@ -309,7 +309,7 @@
 
             var hnICashBillVector = new Module.vectorBill();
             hnICashCard.getBestAssignBill(hnICashBillVector);
-            console.log(hnICashBillVector.size());
+            //console.log(hnICashBillVector.size());
             setCard(hnICashBillVector, bills, 3);
 
             // delete all bills 
