Add toggle buttons, but it's malfunction now :( 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -30,8 +30,16 @@
 
     <div>
         <h1>CreditCardOpt</h1>
+        <h4>Available credit cards:
+        <div class="btn-group" data-toggle="buttons-checkbox">
+        <button type="button" class="btn btn-default">&nbsp;HN&nbsp;</button>
+        <button type="button" class="btn btn-default">&nbsp;YS&nbsp;</button>
+        <button type="button" class="btn btn-default">HNICash</button>
+        </div>
+        </h4>
+        <hr>
         <p id="result" class="alert alert-success" role="alert">
-        <b>Press OK to find best card assignments</b></p>
+        <b>Toggle credit card buttons to enable/disable, then press OK to find best card assignments</b></p>
     <div class="container">
     <div class="row clearfix">
 	<div class="col-md-12 column">
